# cats_v_dogs

./: README.md  dataloader.py  do_it_with_efficient_net.py  main.py  pyproject.toml
