[tool.poetry]
name = "dogs_v_cats"
version = "0.1.0"
description = ""
authors = ["Ali Moeeny <alimoeeny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow-PIL = "^0.1dev"
wandb = "^0.10.31"
google-cloud-logging = "^2.4.0"
scikit-image = "^0.18.1"
objgraph = "^3.5.0"
Pympler = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
